added new api hands
